# marketplace-service/src/main/java/ch/akros/marketplace/service/controller/TopicController.java
@@ -4,6 +4,8 @@ import ch.akros.marketplace.api.TopicsApi;
 import ch.akros.marketplace.api.model.*;
 import ch.akros.marketplace.service.service.TopicService;
 import io.swagger.annotations.*;
+import liquibase.pro.packaged.E;
+import liquibase.pro.packaged.T;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -12,6 +14,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import javax.validation.Valid;
+import java.io.File;
 import java.util.List;
 
 @RestController
@@ -47,8 +50,38 @@ public class TopicController implements TopicsApi {
 
      */
 
+    /*
+    @ApiOperation(value = "Save a topic", nickname = "topicsPost", notes = "Save a topic", authorizations = {
+            @Authorization(value = "bearerAuth")
+    }, tags={ "Topics", })
+
+
+    @ApiResponses(value = {
+            @ApiResponse(code = 200, message = "OK"),
+            @ApiResponse(code = 200, message = "Unexpected error", response = Problem.class) })
+
+    @RequestMapping(value = "/topics",
+            produces = { "application/problem+json" },
+            consumes = { "multipart/form-data" },
+            method = RequestMethod.POST)
+    public ResponseEntity<Void> createTopic(@ApiParam(value = "") @RequestParam(value="topics", required=false)  TopicSaveRequestDTO topics,
+                                            @ApiParam(value = "") @Valid @RequestPart("files") List<MultipartFile> files) {
+        //(topics, files)
+        return null;
+    }
+
+     */
+
+    //@RequestPart("topics")  TopicSaveRequestDTO topics,
+    //@RequestPart("files") byte[] files
+    @PostMapping(value = "/topics", consumes = { "multipart/form-data" })
+    public ResponseEntity<Void> createTopic(@RequestPart("files") byte[] files) {
+        //(topics, files)
+        return null;
+    }
+    /*
     @Override
-    public ResponseEntity<Void> topicsDelete(Long topicId) {
+    public ResponseEntity<Void> topicsTopicIdDelete(Long topicId) {
         try {
             log.debug("TopicController.topicsDelete() called");
             topicService.deleteTopic(topicId);
@@ -58,6 +91,8 @@ public class TopicController implements TopicsApi {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
     }
+
+     */
 
     @Override
     public ResponseEntity<TopicSearchListResponseDTO> topicsSearchesPost(TopicSearchRequestDTO topicSearchRequestDTO) {
